[workspace]
resolver = "2"
# Two binaries (server + client) over shared crates. The vendored sockudo-ws
# is listed explicitly so workspace checks see the vendor participant (Cargo
# would otherwise hide an in-tree path dependency).
members = [
    "bins/outline-ss-rust",
    "bins/outline-ws-rust",
    "crates/outline-metrics",
    "crates/outline-net",
    "crates/outline-routing",
    "crates/outline-transport",
    "crates/outline-tun",
    "crates/outline-uplink",
    "crates/outline-wire",
    "crates/shadowsocks-crypto",
    "crates/socks5-proto",
    "vendor/sockudo-ws",
]

# Shared lint policy for our own packages (each opts in via
# `[lints] workspace = true`; the vendored sockudo-ws deliberately does not).
# The remaining allow is deliberate: the verbose generic types around the
# WsSocket carrier abstraction are tracked as refactor work, not lint noise.
# `too_many_arguments` is enforced at the default threshold — the few
# remaining wide constructors carry targeted `#[allow]`s at the definition.
[workspace.lints.clippy]
type_complexity = "allow"
# Every `unsafe` block/impl in our packages carries a `// SAFETY:` comment
# stating the invariant that makes it sound (fd borrowed for the syscall,
# length checked before the write, libc contract, …). Warn so CI catches a
# regression; the vendored crates do not opt into these lints.
undocumented_unsafe_blocks = "warn"

# Shared release profile. lto="fat" + single codegen unit + panic=abort match
# the previous per-repo release builds (ws used lto=true, which is "fat").
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Symbolized build for on-target `perf` profiling: identical codegen to release
# (same opt-level / lto / codegen-units) but keeps symbols + line tables so
# `perf report` resolves ws-rust frames instead of raw `0x...` addresses. Build
# with `cargo build --profile perf-release -p outline-ws-rust` (or the musl
# cross), profile with `perf record -g -F 999 -p $(pidof outline-ws-rust) --
# sleep 30`, then discard — this profile is a measurement tool, not for release.
[profile.perf-release]
inherits = "release"
strip = false
debug = 1

# HTTP/3 WebSocket path depends on these patched copies — do not drop.
[patch.crates-io]
h3 = { path = "vendor/h3" }
sockudo-ws = { path = "vendor/sockudo-ws" }
