[package]
name = "outline-ss-rust"
version = "1.4.2"
edition = "2024"

[dependencies]
aes = "0.8"
anyhow = "1.0"
arc-swap = "1.7"
axum = { version = "0.8", features = ["ws", "http2"] }
base64 = "0.22"
blake3 = "1.8"
bytes = "1.10"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1.8", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "server-auto", "service", "tokio"] }
http-body-util = "0.1"
libc = "0.2"
libmimalloc-sys = { version = "0.1", default-features = false, features = ["extended"] }
lru = "0.18"
md-5 = "0.10"
mimalloc = { version = "0.1", default-features = false }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
metrics-util = { version = "0.20", default-features = false, features = ["recency"] }
hashbrown = "0.15"
outline-wire = { path = "../../crates/outline-wire", features = ["clap"] }
parking_lot = "0.12"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand = "0.9"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
sockudo-ws = { version = "1.7.3", default-features = false, features = ["tokio", "http3", "fastrand"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
tungstenite = { version = "0.29", default-features = false }
toml = "0.9"
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }
webpki-roots = "1.0"
x509-parser = "0.18"

[features]
default = ["control"]
control = []

[dev-dependencies]
proptest = "1.5"
# Pin rcgen to the ring backend. Its default `aws_lc_rs` backend would add a
# second rustls CryptoProvider to the shared workspace graph, making rustls
# unable to pick a process-level default (breaks ws-rust's tls_probe tests).
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }
# `test-util` enables tokio's paused virtual clock so timer-driven paths
# (e.g. the WebSocket writer's control-flush cadence) can be tested without
# real-time sleeps.
tokio = { version = "1.48", features = ["test-util"] }
tokio-tungstenite = "0.29"
# End-to-end tests dial the outline-ws-rust client transport against this
# server. Now an in-workspace path dependency (previously cross-repo).
outline-transport = { path = "../../crates/outline-transport", features = ["h3", "test-tls"] }
url = "2.5"
