[package]
name = "outline-ws-rust"
version = "1.5.0"
edition = "2024"

# Feature flags
# -------------
# default: VM/server build — H3/QUIC + Prometheus metrics + built-in dashboard
# router:  stripped build for memory-constrained devices
#          disables H3/QUIC, Prometheus metrics, and built-in dashboard
#          build with: cargo zigbuild --profile release-router --no-default-features --features router --target armv7-unknown-linux-musleabihf
[lints]
workspace = true

[features]
default = ["h3", "metrics", "control", "dashboard", "env-filter", "multi-thread", "mimalloc", "tun"]
tun = ["dep:outline-tun", "outline-tun/metrics", "outline-metrics/tun"]   # TUN device support (transparent proxy)
h3 = ["outline-transport/h3", "outline-tun?/quic", "outline-uplink/quic", "dep:quinn"]
metrics = ["outline-metrics/prometheus", "outline-transport/metrics", "outline-uplink/metrics", "dep:serde_json", "hyper/server"]
# control: authenticated mutating HTTP plane (manual uplink switch etc.).
# Independent of `metrics`; both planes bind separate sockets but share hyper's server stack.
control = ["hyper/server", "dep:serde_json", "dep:toml_edit"]
# dashboard: built-in multi-instance monitor/activation UI. Enabled in VM/server
# builds, disabled in stripped router builds to save binary size. Pulls
# `outline-uplink/cert-check` so the cert-expiry chip has data even in a
# dashboard build that omits Prometheus `metrics`.
dashboard = ["hyper/server", "dep:serde_json", "outline-uplink/cert-check"]
# env-filter: dynamic log level via RUST_LOG (pulls in regex, ~300 KB on MIPS).
# Disabled in router builds — log level is hardcoded to WARN instead.
env-filter = ["tracing-subscriber/env-filter"]
# multi-thread: tokio work-stealing scheduler. Disabled in router builds (always
# single-threaded), removing ~100–200 KB of scheduler code on MIPS.
multi-thread = ["tokio/rt-multi-thread"]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
router = ["control"]  # convenience alias: use with --no-default-features --features router
# test-tls: integration-only. Lets the binary trust a self-signed root supplied
# via the OUTLINE_WS_TEST_TLS_CA_DER env var (forwarded to
# outline_transport::install_test_tls_root) so e2e tests can drive TLS / H3 /
# raw-QUIC carriers against a local self-signed server. NEVER in `default` —
# production builds omit the env hook and the install symbol entirely.
test-tls = ["outline-transport/test-tls"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
libmimalloc-sys = { version = "0.1", default-features = false, features = ["extended"], optional = true }
lru = { version = "0.18", default-features = false }
mimalloc = { version = "0.1", default-features = false, optional = true }
outline-metrics = { path = "../../crates/outline-metrics", default-features = false }
outline-net = { path = "../../crates/outline-net" }
outline-routing = { path = "../../crates/outline-routing" }
outline-transport = { path = "../../crates/outline-transport" }
outline-tun = { path = "../../crates/outline-tun", default-features = false, optional = true }
outline-uplink = { path = "../../crates/outline-uplink", default-features = false }
parking_lot = "0.12"
# QUIC server endpoint for the reverse-tunnel listener. Gated under `h3`
# (which already pulls the QUIC client stack) so router builds stay quinn-free.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
shadowsocks-crypto = { path = "../../crates/shadowsocks-crypto" }
socket2 = "0.6"
socks5-proto = { path = "../../crates/socks5-proto" }
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
toml_edit = { version = "0.23", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log"] }
url = { version = "2.5", features = ["serde"] }
webpki-roots = "1.0"

[dev-dependencies]
outline-uplink = { path = "../../crates/outline-uplink", default-features = false, features = ["test-helpers"] }
# rcgen: e2e harness self-signed CA + leaf generation (ring backend per the
# workspace rustls-on-ring invariant). 0.14.x is already in Cargo.lock.
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring"] }
# serde_json: parse the client's /control/topology JSON in the e2e harness,
# independent of the `metrics`/`control` features that gate the runtime copy.
serde_json = "1.0"
tempfile = "3"
# rt-multi-thread + net/io drive the e2e harness's background echo / blackhole /
# splice servers; test-util stays for the existing time-paused unit tests.
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "test-util", "time"] }
