[package]
name = "outline-metrics"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]
tun = []

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
prometheus = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"] }
