[package]
name = "outline-net"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
hashbrown = "0.15"
libc = "0.2"
parking_lot = "0.12"
rand = "0.9"
socket2 = "0.6"
tokio = { version = "1.44", features = ["net", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["io-util", "macros", "net", "rt", "time"] }
