[package]
name = "outline-tun"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["metrics"]
metrics = ["outline-metrics/prometheus", "outline-metrics/tun"]
# Passthrough that enables the QUIC endpoint / TLS plumbing in the lower
# crates (required by the HTTP/3 carrier). The raw-QUIC forward carrier was
# removed, so this crate no longer has any `quic`-gated code of its own; the
# feature is retained because `outline-ws-rust`'s `h3` feature forwards to it.
quic = ["outline-transport/quic", "outline-uplink/quic"]

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1.0"
bytes = "1.10"
dashmap = "6.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hkdf = "0.12"
libc = "0.2"
lru = { version = "0.18", default-features = false }
outline-metrics = { path = "../outline-metrics", default-features = false }
outline-net = { path = "../outline-net" }
outline-routing = { path = "../outline-routing" }
outline-transport = { path = "../outline-transport" }
outline-uplink = { path = "../outline-uplink", default-features = false }
parking_lot = "0.12"
rand = "0.9"
sha2 = "0.10"
shadowsocks-crypto = { path = "../shadowsocks-crypto" }
socks5-proto = { path = "../socks5-proto" }
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
outline-uplink = { path = "../outline-uplink", default-features = false, features = ["test-helpers"] }
# Resume wire vocabulary (the `ORSM` / `ORDR` control frames), so the carrier-
# migration tests can drive a mock server that emits exactly what the real one
# does instead of hand-rolling the bytes.
outline-wire = { path = "../outline-wire" }
# `SO_LINGER = 0` on the mock upstream's socket, so a test can kill a carrier the
# way the network does — with a RST, which is what the client reads as a dirty
# carrier death. A plain drop sends a FIN, which is a *clean* close and means
# "upstream reached EOF" — a different thing entirely.
socket2 = "0.6"
tokio = { version = "1", features = ["test-util"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url = { version = "2.5", features = ["serde"] }
