[package]
name = "outline-wire"
version = "0.1.0"
edition = "2024"

[features]
# Derives clap::ValueEnum on CipherKind for CLI parsing (server binary).
clap = ["dep:clap"]

[dependencies]
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", optional = true, default-features = false, features = ["derive", "std"] }
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"
