[package]
name = "socks5-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
outline-wire = { path = "../outline-wire" }
thiserror = "2.0"
tokio = { version = "1.44", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
